# invoice-generator

./: .gitignore  LICENSE  deviniti_2022_07.yaml  deviniti_2022_08.yaml  deviniti_2022_09.yaml  deviniti_2022_10.yaml  mypy.ini  pyproject.toml  szymczak_2022_11.yaml
invoice_generator/application/: invoice_details_processor.py  pdf_generator.py  resource_provider.py  template_renderer.py
invoice_generator/application/value_formatter/: europe_value_formatter.py  value_formatter.py
invoice_generator/domain/: invoice.py  invoice_item.py
invoice_generator/infrastructure/: jinja2_template_tenderer.py  package_resource_provider.py  pdfkit_pdf_generator.py
invoice_generator/presentation/: cli.py  config_parser.py
invoice_generator/resources/: invoice_example.yaml  template.html
