[tool.poetry]
name = "invoice-generator"
version = "0.1.0"
description = ""
authors = ["Marcin Wątroba <markowanga@gmail.com>"]
packages = [{ include = "invoice_generator" }]

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.7"
click = "^8.0.4"
pdfkit = "^1.0.0"
arrow = "^1.2.2"
Jinja2 = "^3.0.3"
typer = "^0.9.0"
types-pkg-resources = "^0.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
invoice_generator = "invoice_generator.presentation.cli:app"
